<resources>
    <string name="app_name">FoodPlannerApp</string>

    <!--strings for onBoarding screens-->
    <string name="first_slide_title">Welcome</string>
    <string name="second_slide_title">Personalize Your Plan</string>
    <string name="third_slide_title">progress</string>

    <string name="first_slide_desc">Welcome to food planner app, your culinary companion. Let us start on a voyage of tastes and convenience together.</string>
    <string name="second_slide_desc">Create your own meals plan. Take initiative and create customized meals based on your own preferences.</string>
    <string name="third_slide_desc">track your progress,achieve your goal</string>

    <string name="btn_skip">skip</string>
    <string name="btn_next">next</string>
    <string name="lets_get_started">lets get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="login_your_account">please login your account</string>
    <string name="forgot_password">forget password ?</string>
    <string name="or">or</string>
    <string name="continue_with_">continue with</string>
    <string name="already_have_an_account">already have an account? </string>
    <string name="register">register</string>
    <string name="dont_have_account">don\'t have an account? </string>
    <string name="signup">SignUp</string>
    <string name="create_your_account">please create your account</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="back_to_login">back to login</string>
    <string name="your_meal_today">Your Meal Today</string>
    <string name="meal_of_the_day">Meal of the day</string>

</resources>